--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -1,14 +1,47 @@
-#summary One-sentence summary of this page.
+#summary Welcome page for GrapevineIM Wiki.
 #labels Featured
 
-= Introduction =
+= XMPPJCA (by [http://www.grapevine.im GrapevineIM]) = 
 
-Add your content here.
+= Overview =
 
+== What is XMPPJCA? ==
+[http://java.sun.com/j2ee/connector/ JCA version 1.5 Resource Adapter] that lets you connect your J2EE application to an XMPP / Jabber instant messaging service like [http://www.google.com/talk/ Google Talk]. 
 
-= Details =
+== Usage ===
+TODO
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== Motivation ==
+Couldn't find a free, open-source implementation that supoprted inbound messaging, so I just built it myself. Also, see this very good implementation supporting outbound only [http://static.devel.it.su.se/xmppjca/usage.html XMPPJCA by Leif Johansson].
+
+== Feature Highlights ==
+TODO
+
+=== Java Connector Architecture version 1.5 compliant ===
+Complies with JCA 1.5 spec.
+
+=== Supports Inbound and Outbound Messaging ===
+This resource adapter implementation supports both inbound and outbound messaging. 
+
+=== Supports Multiple Concurrent Inbound Endpoints ===
+You can connect to XMPP service using multiple accounts (example: alex@grapevine.im AND sandy@grapevine.im) concurrently, send presence information for both accounts to the server, and then listen for messages to be routed to the different message-driven-beans for each account.
+
+== Dependencies ==
+*XMPPJCA* is built on the [http://www.igniterealtime.org/projects/smack/index.jsp Smack XMPP API] from Jive Software. 
+
+== Supported J2EE Platforms ==
+This resource adapter has been tested on [https://glassfish.dev.java.net/ GlassFish V2]. 
+
+== Known Users ==
+XMPPJCA is being used by [http://www.grapevine.im GrapevineIM].
+
+== License ==
+Apache 2.0
+
+= Documentation =
+
+== How to Get Started in 30 minutes or less ==
+
+== Architecture ==
+
+== Links / References ==
