--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -5,22 +5,21 @@
 
 Please make sure that you have the following software already installed on your machine.
 
-	* Java 5 (or greater)
-	* ANT 1.7 (or greater)
-	* GlassFish V2 
+  * Java 5 (or greater)
+  * ANT 1.7 (or greater)
+  * GlassFish V2 
 
 == Steps to Follow ==
 
 === Part 1 - The Resource Adaptor (*.rar) ===
 
-	1. Download this zip file and extract the contents to a local working directory.
-  	2. Go to that directory, and create a file called project.properties
-  	3. Assuming 'javac' and 'ant' are in your PATH, run the main build file by executing the 
-  following command
-  	{ ant -f build.xml all } or simply { ant }
-  	4. deploy  
+  1. Download this zip file and extract the contents to a local working directory.
+  2. Go to that directory, and create a file called project.properties
+  3. Assuming 'javac' and 'ant' are in your PATH, run the main build file by executing the following command
+  	{{{ ant -f build.xml all }}} or simply {{{ ant }}}
+  4. deploy  
   
 === Part 2 - The Enterprise Application (*.ear) ===
-	1. 
-	2.
-	3.
+  1. 
+  2.
+  3.
