--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -16,7 +16,16 @@ To work with XMPPJCA, you will need to install both the resource adapter (.rar f
 === Part 1 - The Resource Adapter (.rar) ===
 
   # Download this zip file and extract the contents to a local working directory.
-  # Go to that directory, and create a file called project.properties
+  # Go to that directory, and create a file called project.properties. The contents of your file will contain project specific information to compile, as well as login credentials for the XMPP messaging server. Here is an example of the set of properties you will need to define:
+        {{{
+            project.home=C:\\eclipse\\workspace\\grapevineim-xmpp
+            project.j2ee.home=C:\\glassfish
+            project.xmpp.host=talk.google.com
+            project.xmpp.port=5222
+            project.xmpp.domain=gmail.com
+            project.xmpp.username=ENTER_YOUR_USERNAME_HERE
+            project.xmpp.password=ENTER_YOUR_PASSWORD_HERE
+        }}}
   # Assuming 'javac' and 'ant' are in your PATH, run the main build file by executing the following command
 
   	{{{ ant -f build.xml all }}} 
