--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -16,6 +16,7 @@ To work with XMPPJCA, you will need to install both the resource adapter (.rar f
 === Part 1 - The Resource Adapter (.rar) ===
 
   # Download this zip file and extract the contents to a local working directory.
+
   # Go to that directory, and create a file called project.properties. The contents of your file will contain project specific information to compile, as well as login credentials for the XMPP messaging server. Here is an example of the set of properties you will need to define:
         {{{
             project.home=C:\\eclipse\\workspace\\grapevineim-xmpp
@@ -26,13 +27,18 @@ To work with XMPPJCA, you will need to install both the resource adapter (.rar f
             project.xmpp.username=ENTER_YOUR_USERNAME_HERE
             project.xmpp.password=ENTER_YOUR_PASSWORD_HERE
         }}}
+
   # Assuming 'javac' and 'ant' are in your PATH, run the main build file by executing the following command
 
-  	{{{ ant -f build.xml all }}} 
+  	{{{ 
+            ant -f build.xml all 
+        }}} 
 
     or simply 
 
-        {{{ ant }}}
+        {{{ 
+            ant 
+        }}}
 
   # deploy  
   
