--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -12,13 +12,13 @@ Please make sure that you have the following software already installed on your 
 
 == Steps to Follow ==
 
-To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your GlassFish app server. But first you will need to check-out the XMPPJCA project from SVN. 
+To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your GlassFish server. But first you will need to check-out the XMPPJCA project from SVN. 
 
 === Step 1 - Check-out the source code ===
 
 To check-out the source code, refer to the [http://code.google.com/p/xmppjca/source/checkout SVN repository check-out instructions], or have a look at the screenshots below showing how you can add the repository and then check-out the project from within Eclipse using the [http://www.polarion.org/index.php?page=overview&project=subversive Polarion Subversive SVN plugin].
 
-[http://xmppjca.googlecode.com/files/xmppjca-svn-repository.png Add the SVN repository location]
+http://xmppjca.googlecode.com/files/xmppjca-svn-repository.png
 
 Your file structure will look something like this (using Eclipse IDE Package Explorer View as an example)
 
