Edited wiki page through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -40,7 +40,7 @@ http://xmppjca.googlecode.com/files/xmppjca-project-glassfish-unbound.png
 
 === Step 2 - Build The Resource Adapter (.rar) ===
 
-  # Now that you have check-out the code, go to the project's root directory and create a file called project.properties. The contents of your file will contain project specific information to build everything as well as login credentials for the XMPP messaging server. Here is the set of properties that you will need to define:
+  # Now that you have checked-out the code, go to the project's root directory and create a file called project.properties. The contents of your file will contain project specific information to build everything as well as login credentials for the XMPP messaging server. Here is the set of properties that you will need to define:
   {{{
   # fully qualified path to your project files
   project.home=C:\\eclipse\\workspace\\grapevineim-xmpp
