--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -68,9 +68,13 @@ Now that you have checked-out the code, go to the project's root directory and c
 
 http://xmppjca.googlecode.com/files/xmppjca-project-properties.png
 
-=== Step 2.1 - !!!TODO!!! Fix this in dependencies.xml ===
+=== Step 2.1 - TODO - Fix this in dependencies.xml ===
 
-In the dependencies.xml file there is a hardcoded path to your project root directory. You need to manually fix this path on your machine. I will fix this ugly hack very soon!
+In the dependencies.xml file there is a hardcoded path to your project.properties file. You need to manually fix this path on your machine. I will fix this ugly hack very soon!
+
+* Figure 6: Ugly hack for project.properties path in dependencies.xml *
+
+http://xmppjca.googlecode.com/files/xmppjca-project-dependencies-hack.png
 
 === Step 3 - Build The Resource Adapter (.rar) and the Enterprise Application (.ear) ===
 
@@ -83,12 +87,8 @@ Now that you have a project.properties file created, you should be able to build
   ant app
   }}}
 
-* Figure 6: Running ant build commands from within Eclipse *
+* Figure 7: Running ant build commands from within Eclipse *
 
 http://xmppjca.googlecode.com/files/xmppjca-project-ant-build.png
  
-=== Step 4 - The Resource Adapter (.rar) and the Enterprise Application (.ear) ===
-
-  # blah 
-  # blah
-  # blah
+=== Step 4 - Deploy the Resource Adapter (.rar) and the Enterprise Application (.ear) ===
