--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -10,6 +10,8 @@ Please make sure that you have the following software already installed on your 
   * [https://glassfish.dev.java.net GlassFish V2] 
   * [http://www.eclipse.org Eclipse IDE for Java EE Developers (version 3.3)] (optional) 
 
+----
+
 == Installation: 5 Steps ==
 
 To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your GlassFish server. But first you will need to check-out the XMPPJCA project from SVN (hosted by Google Code). 
@@ -99,6 +101,8 @@ Now that you have a project.properties file created, you should be able to build
 * Figure 7: Running ant build commands from within Eclipse *
 
 http://xmppjca.googlecode.com/files/xmppjca-project-ant-build.png
+
+You will find the packaged .rar and .ear files in the respective 'target' directories as shown in Figure 8.
 
 * Figure 8: Output files available in 'target' directories *
 
